add: satu dekade and per daerah

--- a/content/beranda.html
+++ b/content/beranda.html
@@ -101,14 +101,14 @@
                 >
                   <li>
                     <a
-                      href="#"
+                      href="per-daerah.html"
                       class="block px-4 py-2 hover:bg-gray-100 hover:text-black"
                       >Data Per-daerah</a
                     >
                   </li>
                   <li>
                     <a
-                      href="#"
+                      href="satu-dekade.html"
                       class="block px-4 py-2 hover:bg-gray-100 hover:text-black"
                       >Data Satu Dekade</a
                     >
