modify: navbar in tab program

--- a/content/program.html
+++ b/content/program.html
@@ -13,22 +13,10 @@
   </head>
   <body>
     <!-- Navbar -->
-    <nav
-      class="bg-white fixed z-10 w-full transition duration-300 ease-in-out"
-      id="navbar"
-    >
-      <div
-        class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4"
-      >
-        <a
-          href="https://flowbite.com/"
-          class="flex items-center space-x-3 rtl:space-x-reverse"
-        >
-          <span
-            class="self-center text-2xl font-semibold whitespace-nowrap text-black"
-            id="logo"
-            >Web Kemiskinan</span
-          >
+    <nav class="bg-white fixed z-10 w-full transition duration-300 ease-in-out" id="navbar">
+      <div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4">
+        <a href="https://flowbite.com/" class="flex items-center space-x-3 rtl:space-x-reverse">
+          <span class="self-center text-2xl font-semibold whitespace-nowrap text-black" id="logo">Web Kemiskinan</span>
         </a>
         <button
           data-collapse-toggle="navbar-menu"
@@ -36,16 +24,14 @@
           class="inline-flex items-center p-2 w-10 h-10 justify-center text-sm text-black rounded-lg md:hidden focus:outline-none"
           aria-controls="navbar"
           aria-expanded="false"
-          id="toggle"
-        >
+          id="toggle">
           <span class="sr-only">menu</span>
           <svg
             class="w-5 h-5"
             aria-hidden="true"
             xmlns="http://www.w3.org/2000/svg"
             fill="none"
-            viewBox="0 0 17 14"
-          >
+            viewBox="0 0 17 14">
             <path
               stroke="currentColor"
               stroke-linecap="round"
@@ -56,11 +42,7 @@
           </svg>
         </button>
         <div class="hidden w-full md:block md:w-auto" id="navbar-menu">
-          
-          <ul
-            class="font-medium flex flex-col p-4 md:p-0 mt-4 rounded-lg md:flex-row md:space-x-8 rtl:space-x-reverse md:mt-0"
-          >
-          <li></li>
+          <ul class="font-medium flex flex-col p-4 md:p-0 mt-4 rounded-lg md:flex-row md:space-x-8 rtl:space-x-reverse md:mt-0">
             <a
               href="beranda.html"
               class="block py-2 px-3 text-black rounded transition-all duration-300 hover:text-gray-600 nav-link"
@@ -101,14 +83,14 @@
                 >
                   <li>
                     <a
-                      href="#"
+                      href="per-daerah.html"
                       class="block px-4 py-2 hover:bg-gray-100 hover:text-black"
                       >Data Per-daerah</a
                     >
                   </li>
                   <li>
                     <a
-                      href="#"
+                      href="satu-dekade.html"
                       class="block px-4 py-2 hover:bg-gray-100 hover:text-black"
                       >Data Satu Dekade</a
                     >
