--- a/content/per-daerah.html
+++ b/content/per-daerah.html
@@ -19,24 +19,20 @@
       }
     </style>
   </head>
-  <body background="../src/img/yahaha.jpg" class="bg-no-repeat">
+  <body>
     <!-- navbar -->
     <nav
     class="bg-white fixed z-10 w-full transition duration-300 ease-in-out shadow-lg"
-    id="navbar"
-  >
+    id="navbar">
     <div
-      class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4"
-    >
+      class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4">
       <a
         href="https://flowbite.com/"
-        class="flex items-center space-x-3 rtl:space-x-reverse"
-      >
+        class="flex items-center space-x-3 rtl:space-x-reverse">
         <span
           class="self-center text-2xl font-semibold whitespace-nowrap text-black"
           id="logo"
-          >Web Kemiskinan</span
-        >
+          >Web Kemiskinan</span>
       </a>
       <button
         data-collapse-toggle="navbar-menu"
@@ -44,108 +40,73 @@
         class="inline-flex items-center p-2 w-10 h-10 justify-center text-sm text-black rounded-lg md:hidden focus:outline-none"
         aria-controls="navbar"
         aria-expanded="false"
-        id="toggle"
-      >
+        id="toggle">
         <span class="sr-only">menu</span>
         <svg
           class="w-5 h-5"
           aria-hidden="true"
           xmlns="http://www.w3.org/2000/svg"
           fill="none"
-          viewBox="0 0 17 14"
-        >
+          viewBox="0 0 17 14">
           <path
             stroke="currentColor"
             stroke-linecap="round"
             stroke-linejoin="round"
             stroke-width="2"
-            d="M1 1h15M1 7h15M1 13h15"
-          />
+            d="M1 1h15M1 7h15M1 13h15"/>
         </svg>
       </button>
       <div class="hidden w-full md:block md:w-auto" id="navbar-menu">
-        
         <ul
-          class="font-medium flex flex-col p-4 md:p-0 mt-4 rounded-lg md:flex-row md:space-x-8 rtl:space-x-reverse md:mt-0"
-        >
-        <li></li>
+          class="font-medium flex flex-col p-4 md:p-0 mt-4 rounded-lg md:flex-row md:space-x-8 rtl:space-x-reverse md:mt-0">
           <a
             href="beranda.html"
             class="block py-2 px-3 text-black rounded transition-all duration-300 hover:text-gray-600 nav-link"
-            >Beranda</a
-          >
+            >Beranda</a>
         </li>
-          <li
-            
-              id="dropdownNavbarLink"
-              data-dropdown-toggle="dropdownNavbar"
-              class="py-2 px-3 text-black rounded transition-all duration-300 hover:text-gray-600  nav-link flex cursor-pointer items-center justify-between"
-            >
-              Data Kemiskinan
-              <svg
-                class="w-2.5 h-2.5 ms-2.5"
-                aria-hidden="true"
-                xmlns="http://www.w3.org/2000/svg"
-                fill="none"
-                viewBox="0 0 10 6"
-              >
-                <path
-                  stroke="currentColor"
-                  stroke-linecap="round"
-                  stroke-linejoin="round"
-                  stroke-width="2"
-                  d="m1 1 4 4 4-4"
-                />
+        <li
+          id="dropdownNavbarLink"
+          data-dropdown-toggle="dropdownNavbar"
+          class="py-2 px-3 text-black rounded transition-all duration-300 hover:text-gray-600  nav-link flex cursor-pointer items-center justify-between">
+          Data Kemiskinan
+          <svg
+            class="w-2.5 h-2.5 ms-2.5"
+            aria-hidden="true"
+            xmlns="http://www.w3.org/2000/svg"
+            fill="none"
+            viewBox="0 0 10 6">
+              <path
+                stroke="currentColor"
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                stroke-width="2"
+                d="m1 1 4 4 4-4"/>
               </svg>
             </>
             <!-- Dropdown menu -->
             <div
               id="dropdownNavbar"
-              class="z-10 hidden font-normal bg-white divide-y divide-gray-100 rounded-lg shadow-lg w-44"
-            >
+              class="z-10 hidden font-normal bg-white divide-y divide-gray-100 rounded-lg shadow-lg w-44">
               <ul
                 class="py-2 text-sm text-gray-700 dark:text-gray-400"
-                aria-labelledby="dropdownLargeButton"
-              >
+                aria-labelledby="dropdownLargeButton">
                 <li>
-                  <a
-                    href="per-daerah.html"
-                    class="block px-4 py-2 hover:bg-gray-100 underline underline-offset-8 hover:text-black"
-                    >Data Per-daerah</a
-                  >
+                  <a href="per-daerah.html" class="block px-4 py-2 hover:bg-gray-100 underline underline-offset-8 hover:text-black">Data Per-daerah</a>
                 </li>
                 <li>
-                  <a
-                    href="satu-dekade.html"
-                    class="block px-4 py-2 hover:bg-gray-100 hover:text-black"
-                    >Data Satu Dekade</a
-                  >
+                  <a href="satu-dekade.html" class="block px-4 py-2 hover:bg-gray-100 hover:text-black">Data Satu Dekade</a>
                 </li>
             </div>
-            <span
-              class="block max-w-0 group-hover:max-w-full transition-all duration-500 h-0.5 bg-sky-600"
-            ></span>
+            <span class="block max-w-0 group-hover:max-w-full transition-all duration-500 h-0.5 bg-sky-600"></span>
           </li>
           <li>
-            <a
-              href="program.html"
-              class="block py-2 px-3 text-black rounded transition-all duration-300 hover:text-gray-600  nav-link"
-              >Program</a
-            >
+            <a href="program.html" class="block py-2 px-3 text-black rounded transition-all duration-300 hover:text-gray-600  nav-link">Program</a>
           </li>
           <li>
-            <a
-              href="laporan.html"
-              class="block py-2 px-3 text-black rounded transition-all duration-300 hover:text-gray-600  nav-link"
-              >Laporan</a
-            >
+            <a href="laporan.html" class="block py-2 px-3 text-black rounded transition-all duration-300 hover:text-gray-600  nav-link">Laporan</a>
           </li>
           <li>
-            <a
-              href="tentangKami.html"
-              class="block py-2 px-3 text-black rounded transition-all duration-300 hover:text-gray-600  nav-link"
-              >Tentang Kami</a
-            >
+            <a href="tentangKami.html" class="block py-2 px-3 text-black rounded transition-all duration-300 hover:text-gray-600  nav-link">Tentang Kami</a>
           </li>
         </ul>
       </div>
