modify: add persentase in tab satu-dekade

--- a/content/per-daerah.html
+++ b/content/per-daerah.html
@@ -158,7 +158,7 @@
       data: data,
       options: {
         indexAxis: indexAxis,
-        maintainAspectRatio: false, // Biarkan grafik mengisi kontainer
+        maintainAspectRatio: false,
         responsive: true,
         plugins: {
           legend: {
