--- a/content/satu-dekade.html
+++ b/content/satu-dekade.html
@@ -233,6 +233,11 @@
         },
         yaxis: {
           show: true,
+          labels: {
+            formatter: function (value) {
+            return value + '%';
+            }
+          }
         },
         }
         
