modify: change paragraph from per-daerah

--- a/content/per-daerah.html
+++ b/content/per-daerah.html
@@ -103,12 +103,48 @@
   <!-- navbar end -->
     <div class="p-4 bg-white">
     <div class="text-center pt-20 font-bold text-1xl md:text-1xl">Persentase Kemiskinan Berdasarkan <br>Daerah Tahun 2024</div>
-    <div class="px-3 pt-10">
-      <p class="text-center text-gray-600">
-        Berikut ini adalah data persentase kemiskinan yang dibagi berdasarkan perkotaan dan pedesaan di setiap provinsi di Indonesia untuk tahun 2024. Data ini dapat membantu memberikan wawasan mengenai kondisi sosial ekonomi di berbagai daerah dan menjadi acuan dalam pengambilan keputusan terkait kebijakan pengentasan kemiskinan.
+    <div class="px-3 pt-10 text-left">
+      <p class="text-justify">
+        Angka kemiskinan di Indonesia per Maret 2024 kembali mengalami penurunan, melanjutkan tren penurunan yang sudah terjadi sejak September 2022.
+      </p>
+      <p class="text-justify"></p>
+      Badan Pusat Statistik (BPS) melaporkan tingkat kemiskinan melanjutkan tren menurun menjadi 9,03% pada Maret 2024, dari sebelumnya sebesar 9,36% pada Maret 2023.
+      </p>
+      <p class="text-justify"></p>
+      Penduduk miskin pada Maret 2024 turun 0,68 juta orang dari Maret 2023, sehingga jumlah penduduk miskin menjadi sebesar 25,22 juta orang.
+      </p>
+      <p class="text-justify"></p>
+      Secara spasial juga terjadi perbaikan, di mana tingkat kemiskinan menurun baik di perkotaan maupun di perdesaan. Tingkat kemiskinan di perkotaan turun ke level 7,09% pada Maret 2024, dari sebelumnya yang mencapai 7,29% pada Maret 2023.
+      </p>
+      <p class="text-justify"></p>
+      Sementara itu, persentase penduduk miskin di perdesaan mengalami penurunan menjadi sebesar 11,79% pada Maret 2024, dari sebelumnya mencapai 12,22% pada Maret 2023.
+      </p>
+      <p class="text-justify"></p>
+      Penurunan kemiskinan juga terjadi di seluruh wilayah Indonesia, dengan penurunan tertinggi terjadi di Bali dan Nusa Tenggara, baik Nusa Tenggara Barat maupun Nusa Tenggara Timur.
+      </p>
+      <p class="text-justify"></p>
+      Selain itu, tingkat ketimpangan pengeluaran penduduk Indonesia (Rasio Gini) juga menurun dan berada di bawah level pra-pandemi menjadi sebesar 0,379 pada Maret 2024, dari sebelumnya di level 0,388 pada Maret 2023. <br> Level tersebut merupakan yang terendah dalam satu dekade terakhir. Penurunan ketimpangan terjadi baik di perkotaan maupun perdesaan.
+      </p>
+      <p class="text-justify"></p>
+      Penurunan angka kemiskinan pada Maret 2024 ditopang oleh solidnya aktivitas ekonomi domestik dan berbagai program bantuan sosial pemerintah, khususnya dalam merespons kenaikan inflasi pangan pada awal 2024.
+      </p>
+      <p class="text-justify"></p>
+      Terlepas dari penurunan kemiskinan yang paling tinggi di Bali, Nusa Tenggara Barat, dan Nusa Tenggara Timur, tetapi masih ada beberapa Provinsi yang masih mencatatkan angka kemiskinan cukup tinggi, meski secara nasional kembali menurun.
+      </p>
+      <p class="text-justify"></p>
+      Berdasarkan data dari BPS, jika dirincikan lebih lanjut, dari daerah perkotaan, maka provinsi dengan jumlah penduduk miskin paling banyak per Maret 2024 berada di Jawa Barat, dengan total mencapai 2.921.520 jiwa
+      </p>
+      <p class="text-justify"></p>
+      Sedangkan dari persentasenya, Papua Pegunungan menjadi provinsi dengan penduduk miskin terbanyak di perkotaan yakni mencapai 16,56%.
+      </p>
+      <p class="text-justify"></p>
+      Sementara dari jumlah penduduk miskin di pedesaan, Jawa Timur menjadi yang paling banyak per Maret 2024 yakni mencapai 2.399.990 jiwa. Sedangkan dari persentasenya, Papua Tengah menjadi provinsi dengan penduduk miskin terbanyak di pedesaan yakni mencapai 37,98%.
+      </p>
+      <p class="text-justify"></p>
+      Adapun secara total, Jawa Timur menduduki posisi pertama dengan jumlah penduduk miskin terbanyak yakni mencapai 3.982.690 jiwa. Sedangkan dari persentase total, Papua Pegunungan menduduki posisi pertama dengan persentase penduduk miskin terbanyak yakni mencapai 32,97%.
       </p>
     </div>
-    <div class="relative overflow-x-auto shadow-md sm:rounded-lg">
+    <div class="relative overflow-x-auto shadow-md sm:rounded-lg pt-10">
       <table class="w-full text-sm text-left rtl:text-right text-gray-500 dark:text-gray-400">
           <thead class="text-xs text-gray-700 uppercase bg-gray-50 dark:bg-gray-700 dark:text-gray-400">
               <tr>
