--- a/content/per-daerah.html
+++ b/content/per-daerah.html
@@ -143,6 +143,7 @@
       <p class="text-justify"></p>
       Adapun secara total, Jawa Timur menduduki posisi pertama dengan jumlah penduduk miskin terbanyak yakni mencapai 3.982.690 jiwa. Sedangkan dari persentase total, Papua Pegunungan menduduki posisi pertama dengan persentase penduduk miskin terbanyak yakni mencapai 32,97%.
       </p>
+      <p class="text-gray-600 italic text-center text-sm">Sumber: CNBC Indonesia</p>
     </div>
     <div class="relative overflow-x-auto shadow-md sm:rounded-lg pt-10">
       <table class="w-full text-sm text-left rtl:text-right text-gray-500 dark:text-gray-400">
@@ -391,6 +392,7 @@
           </tr>
           </tbody>
       </table>
+      <p class="text-gray-600 italic text-center text-sm">Sumber:Badan Pusat Statistik (BPS)</p>
   </div>
   
       <script src="https://cdn.jsdelivr.net/npm/flowbite@2.5.1/dist/flowbite.min.js"></script>
