--- a/content/satu-dekade.html
+++ b/content/satu-dekade.html
@@ -148,7 +148,7 @@
     <div class="text-center pt-20 font-bold text-1xl md:text-1xl">Persentase Kemiskinan Di Indonesia <br> Tahun 2014-2024</div>
     <script src="https://cdn.jsdelivr.net/npm/apexcharts"></script>
     <div id="data-series-chart"></div>
-    <p class="text-gray-600 italic text-center">Sumber:Badan Pusat Statistik (BPS)</p>
+    <p class="text-gray-600 italic text-center text-sm">Sumber:Badan Pusat Statistik (BPS)</p>
       <div class="px-3 pt-10">
         <p class="mb-3 text-left text-justify text-gray-500 dark:text-gray-400">Badan Pusat Statistik (BPS) mencatat jumlah penduduk miskin pada Maret 2024 sebesar 25,22 juta orang. Angka ini menjadi yang terendah dalam 1 dekade terakhir. Sejak 2014 hingga 2024 kemiskinan sempat meningkat pada pandemi Covid-19 lalu menurun hingga Maret 2024.</p>
         <p class="mb-3 text-left text-justify text-gray-500 dark:text-gray-400">Bahkan, jumlah penduduk miskin berkurang sekitar 3,06 juta orang atau turun sekitar 2,22 persen poin dalam sepuluh tahun terakhir. Jika di rata-rata jumlah penduduk miskin berkurang sekitar 300.000 orang per tahun.</p>
